    Added the ability to delete and navigate HTML media elements without the media plugin #TINY-4211
    Added `fullscreen_native` setting to the fullscreen plugin to enable use of the entire monitor #TINY-6284
    Added the `origin` property to the `ObjectResized` and `ObjectResizeStart` events, to specify which handle the resize was preformed on #TINY-6242
    Changed the `target` property on fired events to use the native event target. The original target for an open shadow root can be obtained using `event.getComposedPath()` #TINY-6128
    Changed `imagetools` context menu icon for accessing the `image` settings to use the same icon #TINY-4141
    Deprecated the `Env.experimentalShadowDom` flag #TINY-6128
    Fixed the `event.getComposedPath()` function on events fired from TinyMCE. This was throwing an exception, but now works as expected. #TINY-6128
    Fixed the `template` plugin previews missing some content styles #TINY-6115
    Fixed the `media` plugin not saving the alternative source url in some situations #TINY-4113
    Fixed an issue where column resizing using the resize bars was inconsistent between fixed and relative table widths #TINY-6001
    Fixed an issue where dragging and dropping within a table would select table cells #TINY-5950
    Fixed up and down keyboard navigation not working for inline `contenteditable="false"` elements #TINY-6226
    Fixed the `unlink` toolbar button not working when selecting multiple links #TINY-4867
    Fixed the `link` dialog not showing the "Text to display" field in some valid cases #TINY-5205
    Fixed the `DOMUtils.split()` API incorrectly removing some content #TINY-6294
    Fixed pressing escape not focusing the editor when using multiple toolbars #TINY-6230
    Fixed the `dirty` flag not being correctly set during an `AddUndo` event #TINY-4707
Version 5.4.2 (2020-08-17)
    Fixed the editor not resizing when resizing the browser window in fullscreen mode #TINY-3511